# LocalContextRouter

./: .gitignore  CHANGELOG.md  README.md  hatch_build.py  pyproject.toml
.claude/skills/local-context-router/: SKILL.md
.claude/skills/local-context-router/scripts/: preflight.py
.github/workflows/: ci.yml  release.yml
ocr/: Package.swift  README.md
ocr/Sources/LCROCR/: ImageLoading.swift  Models.swift  OCREngine.swift
ocr/Sources/lcr-ocr/: main.swift
ocr/Tests/LCROCRTests/: OCREngineTests.swift
src/localcontextrouter/: __init__.py  classify.py  cli.py  detect.py  models.py  ocr.py  pdf.py  router.py  text.py  tokens.py
tests/: conftest.py  test_classify.py  test_cli.py  test_detect.py  test_ocr.py  test_package.py  test_pdf.py  test_router.py  test_skill.py  test_text.py  test_tokens.py
