[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localcontextrouter"
description = "Preflight router that picks the cheapest faithful path — text, OCR, or vision — before a document reaches a multimodal LLM."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Siddharth Nashikkar" }]
keywords = ["llm", "ocr", "pdf", "vision", "tokens", "preprocessing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/sid732/LocalContextRouter"
Repository = "https://github.com/sid732/LocalContextRouter"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.version]
path = "src/localcontextrouter/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/localcontextrouter"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
