[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localcontextrouter"
description = "Preflight router that picks the cheapest faithful path (text, OCR, or vision) before a document reaches a multimodal LLM."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Siddharth Nashikkar" }]
keywords = ["llm", "ocr", "pdf", "vision", "tokens", "preprocessing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dynamic = ["version"]
dependencies = [
    "pypdfium2>=4.30",
    "pillow>=10.1",
]

[project.scripts]
localctx = "localcontextrouter.cli:main"

[project.urls]
Homepage = "https://github.com/sid732/LocalContextRouter"
Repository = "https://github.com/sid732/LocalContextRouter"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "fpdf2>=2.7",
]

[tool.hatch.version]
path = "src/localcontextrouter/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/localcontextrouter"]
artifacts = ["src/localcontextrouter/_bin/lcr-ocr"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
exclude = ["src/localcontextrouter/_bin"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["pypdfium2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: tests that invoke the built lcr-ocr binary",
]
